<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="190dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="99dp"
            android:id="@+id/textViewLatLong"
            android:layout_gravity="center_horizontal"
            android:editable="false"
            android:padding="10dp"
            android:hint="Lat Long Here"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="15dp"
            android:textIsSelectable="false" />


        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id = "@+id/locationProviderGroup"
            android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NetworkButton"
            android:id="@+id/radioButtonNetwork"
            android:layout_gravity="left|center_vertical"
            android:enabled="true" />


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GPSButton"
                android:id="@+id/radioButtonGPS"
                android:layout_gravity="center|left" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FusedButton"
            android:id="@+id/radioButtonFused"
            android:layout_gravity="center_horizontal|bottom|left" />


        </RadioGroup>

        <Button
            android:layout_width="83dp"
            android:layout_height="63dp"
            android:text="@string/startTracking"
            android:id="@+id/buttonStart"
            android:layout_gravity="left|bottom"
            android:textSize="12dp" />

        <Button
            android:layout_width="86dp"
            android:layout_height="65dp"
            android:text="@string/stopTracking"
            android:id="@+id/buttonStop"
            android:layout_gravity="center_horizontal|bottom"
            android:textSize="12dp" />

        <Button
            android:layout_width="88dp"
            android:layout_height="65dp"
            android:text="@string/lastLocation"
            android:id="@+id/buttonLast"
            android:layout_gravity="right|bottom"
            android:textSize="12dp" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="210dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="174dp"
            android:id="@+id/addressListView"
            android:layout_gravity="right|bottom" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/getAddressButton"
            android:id="@+id/buttonGetAddress"
            android:layout_gravity="center_horizontal|top" />
    </FrameLayout>
</RelativeLayout>
